# Ranpu

./: .eslintrc.cjs  .gitattributes  .gitignore  CONTRIBUTING.md  PROMPT.md  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/application/: errors.rs  mod.rs  session_guard.rs
src-tauri/src/application/audit/: export_audit_log.rs  list_audit_events.rs  mod.rs  service.rs
src-tauri/src/application/backup/: export_encrypted_backup.rs  import_encrypted_backup.rs  mod.rs  service.rs
src-tauri/src/application/calculation/: calculate_dye_amounts.rs  formula_resolver.rs  mod.rs  search_by_customer.rs  service.rs
src-tauri/src/application/cart/: add_to_cart.rs  clear_cart.rs  export_cart_as_batch_sheet.rs  list_cart_with_calculations.rs  mod.rs  preview_cart_as_batch_sheet.rs  remove_from_cart.rs  service.rs  update_cart_item_kg.rs
src-tauri/src/application/formula/: batch_copy_default_to_workspace.rs  copy_default_to_active_workspace.rs  delete_default_formula.rs  delete_workspace_formula.rs  export_archive.rs  export_default_formulas.rs  export_workspace_formulas.rs  import_archive.rs  import_default_formulas.rs  import_workspace_formulas.rs  list_color_families.rs  list_default_formulas.rs  list_workspace_formulas.rs  mod.rs  parse.rs  preview_archive.rs  service.rs  system_mirror.rs  upsert_default_formula.rs  upsert_workspace_formula.rs  wire.rs
src-tauri/src/application/identity/: activate_user.rs  authenticate_user.rs  change_user_password.rs  create_user.rs  deactivate_user.rs  list_users.rs  lock_session.rs  logout.rs  mod.rs  service.rs  unlock_session.rs
src-tauri/src/application/ports/: audit_csv_exporter.rs  audit_repository.rs  audit_writer.rs  batch_sheet_exporter.rs  cart_repository.rs  clock.rs  db_backup.rs  default_formula_repository.rs  encrypted_exporter.rs  errors.rs  key_store.rs  mod.rs  password_hasher.rs  session_store.rs  user_repository.rs  workspace_formula_repository.rs  workspace_repository.rs
src-tauri/src/application/sync/: mod.rs  peer.rs  service.rs
src-tauri/src/application/workspace/: create_workspace.rs  delete_workspace.rs  list_workspaces.rs  mod.rs  rename_workspace.rs  service.rs  switch_active_workspace.rs  update_workspace_description.rs
src-tauri/src/domain/: mod.rs
src-tauri/src/domain/audit/: audit_event.rs  mod.rs
src-tauri/src/domain/calculation/: dye_calculator.rs  mod.rs
src-tauri/src/domain/cart/: cart.rs  cart_item.rs  mod.rs
src-tauri/src/domain/formula/: amounts.rs  customer_color_code.rs  default_formula.rs  formula_item.rs  internal_color_code.rs  liquor_ratio.rs  mod.rs  unit.rs  workspace_formula.rs
src-tauri/src/domain/identity/: errors.rs  mod.rs  password.rs  role.rs  session.rs  user.rs
src-tauri/src/domain/session/: mod.rs  session.rs
src-tauri/src/domain/shared/: errors.rs  id.rs  mod.rs
src-tauri/src/domain/workspace/: mod.rs  workspace.rs
src-tauri/src/infrastructure/: clock_system.rs  mod.rs
src-tauri/src/infrastructure/crypto/: aes_gcm_exporter.rs  argon2_hasher.rs  dpapi_keystore.rs  key_derivation.rs  master_key.rs  mod.rs  recovery.rs
src-tauri/src/infrastructure/export/: audit_csv_exporter.rs  batch_sheet_csv.rs  (+1 more)
src-tauri/src/interfaces/: mod.rs
(+102 files in other folders)
