[package]
name = "ranpu"
version = "1.0.3"
description = "染谱 Ranpu — 离线染纱配色软件"
authors = ["Bo He"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "ranpu_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
# 开发种子 (255 默认配方 + 20 客户工作区 × 5-20 配方).
# 默认关闭, tauri build / cargo build --release 不会带上 → 不会进生产端.
# 用法: RANPU_DEV_SEED=1 cargo tauri dev --features dev-seed
default = []
dev-seed = []

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri 运行时
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-single-instance = "2"

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 领域层基础设施（仅 std + 这三个，符合 PROMPT 架构铁律）
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }

# 持久化（SQLCipher + 静态 OpenSSL）
rusqlite = { version = "0.32", features = ["bundled-sqlcipher-vendored-openssl", "chrono"] }
parking_lot = "0.12"

# 加密（feat/infra-crypto）
argon2 = "0.5"
aes-gcm = "0.10"
pbkdf2 = "0.12"
hmac = "0.12"
sha2 = "0.10"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Security_Cryptography",
  "Win32_Foundation",
] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
